#1 added required BFS Class and functions